--- a/template.css
+++ b/template.css
@@ -34,20 +34,6 @@ header {
     margin-top: 20px;
 }
 
-#main {
-    margin-top: 20px;
-    padding: 20px;
-    padding-left: 120px;
-    text-align: justify;
-    background-color: #f5f5dc;
-}
-
-footer {
-    margin-top: 20px;
-    text-align: right;
-    padding-right: 10px;
-}
-
 nav ul, .flottant ul {
     list-style: none;
     width: auto;
@@ -70,6 +56,21 @@ nav ul li {
     border-right: 1px solid black;
     height: 30px;
     padding: 10px 10px 0 10px;
+    cursor: pointer;
+}
+
+#main {
+    margin-top: 20px;
+    padding: 20px;
+    padding-left: 120px;
+    text-align: justify;
+    background-color: #f5f5dc;
+}
+
+footer {
+    margin-top: 20px;
+    text-align: right;
+    padding-right: 10px;
 }
 
 .flottant {
