--- a/template.css
+++ b/template.css
@@ -3,8 +3,12 @@ body {
     font-family: Arial,Helvetica,sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 section, header {
-    width: 760px;
+    width: 800px;
     margin: auto;
 }
 
@@ -14,12 +18,16 @@ header {
     background-color: red;
 }
 
+/**
+*   IDENTITE
+*/
+
 #identity {
     position: fixed;
     width: 320px;
     height: 250px;/*temporaire*/
     top: 82px;
-    background-color: #8a2be2;
+    background-color: #808080;
     margin-left: 50px;
     font-size: 0.9em;
 }
@@ -33,6 +41,10 @@ header {
 #perso {
     margin-top: 20px;
 }
+
+/**
+*       NAVIGATION
+*/
 
 nav ul, .flottant ul {
     list-style: none;
@@ -59,18 +71,29 @@ nav ul li {
     cursor: pointer;
 }
 
+/**
+*       MAIN
+*/
+
 #main {
-    margin-top: 20px;
-    padding: 20px;
-    padding-left: 120px;
+    margin-top: 30px;
+    padding: 0 20px 0 160px;
     text-align: justify;
-    background-color: #f5f5dc;
 }
 
+/**
+*       FOOTER
+*/
+
 footer {
-    margin-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 5px;
     text-align: right;
-    padding-right: 10px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 300px;
+    font-size: 0.9em;
 }
 
 .flottant {
